--- a/install.yaml
+++ b/install.yaml
@@ -4,7 +4,7 @@ pre_install_actions:
 # This item shows complex go templating possibilities based on yaml_read_files
 - |
 - #ddev-description:Create a hooks.server.js
-  echo '/** @type {import(\'@sveltejs/kit\').Handle} */\nexport async function handle({ event, resolve }) {\n    console.log(\'src/hooks.server.js: handle()\')\n    if (process.env.IS_DDEV_PROJECT === \'true\' && event.url.host === \'node-srv\') {\n        event.url = new URL(event.url.href.replace(\'http://node-srv\', process.env.DDEV_PRIMARY_URL))\n    }\n    const response = await resolve(event);\n    return response;\n}' >hooks.server.js
+  echo '/** @type {import(\\\'@sveltejs/kit\\\').Handle} */\\nexport async function handle({ event, resolve }) {\\n    console.log(\\\'src/hooks.server.js: handle()\\\')\\n    if (process.env.IS_DDEV_PROJECT === \\\'true\\\' && event.url.host === \\\'node-srv\\\') {\\n        event.url = new URL(event.url.href.replace(\\\'http://node-srv\\\', process.env.DDEV_PRIMARY_URL))\\n    }\\n    const response = await resolve(event);\\n    return response;\\n}' >hooks.server.js
   
 project_files:
   - nginx_full/nginx-site.conf
