--- a/install.yaml
+++ b/install.yaml
@@ -5,10 +5,10 @@ pre_install_actions:
 - |
 - #ddev-description:Create a hooks.server.js
   cat <<'EOF' > hooks.server.js
-  /** @type {import(\'@sveltejs/kit\').Handle} */
+  /** @type {import('@sveltejs/kit').Handle} */
   export async function handle({ event, resolve }) {
-      if (process.env.IS_DDEV_PROJECT === \'true\' && event.url.host === \'node-srv\') {
-          event.url = new URL(event.url.href.replace(\'http://node-srv\', process.env.DDEV_PRIMARY_URL))
+      if (process.env.IS_DDEV_PROJECT === 'true' && event.url.host === 'node-srv') {
+          event.url = new URL(event.url.href.replace('http://node-srv', process.env.DDEV_PRIMARY_URL))
       }
       const response = await resolve(event);
       return response;
