--- a/install.yaml
+++ b/install.yaml
@@ -29,8 +29,8 @@ post_install_actions:
   - |
     #ddev-nodisplay
     echo "Add src/hooks.server.js to .git/info/exclude:"
-    if [ -f .git/info/exclude ]; then
-      grep "src/hooks.server.js" .git/info/exclude || echo "src/hooks.server.js" >> .git/info/exclude
+    if [ -f ../.git/info/exclude ]; then
+      grep "src/hooks.server.js" ../.git/info/exclude || echo "src/hooks.server.js" >> ../.git/info/exclude
     fi
   - echo '##############################################################'
   - echo 'Please do not forget to edit .ddev/docker-compose.network.yaml'
