--- a/install.yaml
+++ b/install.yaml
@@ -11,6 +11,7 @@ pre_install_actions:
     .ddev/nginx_full/nginx-site.conf \
     .ddev/sveltekit/hooks.server.js \
     .ddev/commands/host/vscodeip \
+    .ddev/commands/web/viteinspect \
     .ddev/docker-compose.network.yaml; do
       if [ -f $file ]; then
         if ! grep "#ddev-generated" $file; then
@@ -26,6 +27,7 @@ project_files:
   - sveltekit/hjson-linux64
   - sveltekit/jq-linux64
   - commands/host/vscodeip
+  - commands/web/viteinspect
   - docker-compose.network.yaml
 
 post_install_actions:
